[package]
name = "skynet"
version = "1.0.0"
authors = ["osmarks <osmarks@protonmail.com>"]
edition = "2018"

[dependencies]
warp = "0.1"
futures = "0.1"
slotmap = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1"
toml = "0.4"